exercises/ex-1-10/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hashgenerator-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hashgenerator
  template:
    metadata:
      labels:
        app: hashgenerator
    spec:
      volumes: # Define volume
        - name: shared-files
          emptyDir: {}
      containers:
        - name: hashgenerator
          image: logwriter
          imagePullPolicy: IfNotPresent
          volumeMounts: # Mount volume
          - name: shared-files
            mountPath: /usr/src/app/files
        - name: view
          image: logreader
          imagePullPolicy: IfNotPresent
          volumeMounts: # Mount volume
          - name: shared-files
            mountPath: /usr/src/app/files
          ports:
            - containerPort: 5000
